supp + manque controle meme nom

--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Qui sera l'élu?</title>
-    <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="img/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- fontawesome CSS -->
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -27,26 +32,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-<div class="container">
-    <div class="election">
-        <div class="title">
-            <h1>Qui sera l'élu?</h1>
-        </div>
-        <button id="start" class="btn btn-primary">Commencer</button>
+    <div class="container">
+      <div class="box" id="box">
+        <h1>Qui sera l'élu?</h1>
+        
+        <button type="button" class="btn btn-primary" id="start">Start</button>
+      </div>
     </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
