--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       referrerpolicy="no-referrer"
     />
     <!-- Bootstrap CSS -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    />
+    /> -->
     <!-- CSS MAIN -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -47,27 +47,27 @@
       <div id="WinMessage"></div>
       <div>
         <h1>Insérez au moins deux joueurs pour débuter</h1>
-        <div id="containerUser">
-          <!--Exemple de ce que donne l'article-->
-                <!--<article class="card">
-                    <div class="content">
-                      <h4>John Doe</h4> 
-                      <button class="btn btn-red">-</button>
-                    </div>
-                </article>-->
-        </div>
+        <div id="containerUser"></div>
         <div id="btnGroupe">
-          <button id="addUser" class="btn btn-green"><i class="fa-solid fa-plus"></i></button>
-          <button id="play" class="btn btn-red"><i class="fa-solid fa-play"></i></button>
-          <button id="reset" class="btn btn-green"><i class="fa-solid fa-arrow-rotate-left"></i></button>
-          <button id="stop" class="btn btn-red"><i class="fa-solid fa-stop"></i></button>
+          <button id="addUser" class="btn btn-green">
+            <i class="fa-solid fa-plus"></i>
+          </button>
+          <button id="play" class="btn btn-red">
+            <i class="fa-solid fa-play"></i>
+          </button>
+          <button id="reset" class="btn btn-green">
+            <i class="fa-solid fa-arrow-rotate-left"></i>
+          </button>
+          <button id="stop" class="btn btn-red">
+            <i class="fa-solid fa-stop"></i>
+          </button>
         </div>
       </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
@@ -81,7 +81,7 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- JS MAIN -->
     <script type="text/javascript" src="js/apps.js"></script>
   </body>
